log

Tue 12 Mar 2024 08:46:49 PM UTC: 
 tests:  0|7
total_score: 0/70
0316e0c
Wed 13 Mar 2024 02:02:39 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ad7e13f
Thu 14 Mar 2024 12:34:29 AM UTC: 
 exercises.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:1:
test.c: In function ‘filterEvenNumbers’:
exercises.c:45:19: error: ‘nuevoArr’ is used uninitialized [-Werror=uninitialized]
   45 |   int *nuevoArr = realloc(nuevoArr, sizeof(int) * *newSize);
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:53:23: error: ‘nuevoArr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   53 |       int *nuevoArr = realloc(nuevoArr, sizeof(int) * *newSize);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3045025
Thu 14 Mar 2024 12:41:24 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:23: error: ‘nuevoArr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   53 |       int *nuevoArr = realloc(nuevoArr, sizeof(int) * *newSize);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e106372
Thu 14 Mar 2024 12:44:53 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:15: error: array subscript is not an integer
   51 |       nuevoArr[newSize] = arr[i];
      |               ^
Compilation failed
07192e2
Thu 14 Mar 2024 12:45:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:23: error: ‘nuevoArr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   54 |       int *nuevoArr = realloc(nuevoArr, sizeof(int) * *newSize);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6704f11
Thu 14 Mar 2024 12:47:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:23: error: ‘nuevoArr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   54 |       int *nuevoArr = realloc(nuevoArr, sizeof(int) * *newSize);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
51c3960
Thu 14 Mar 2024 12:47:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c1c6835
Thu 14 Mar 2024 12:48:04 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
84dc21a
Thu 14 Mar 2024 12:48:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61360ef
Thu 14 Mar 2024 12:48:41 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4083720
Thu 14 Mar 2024 01:04:12 AM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|0
17900aa
Thu 14 Mar 2024 01:06:32 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
5a23b13
Thu 14 Mar 2024 01:07:10 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
768e548
Thu 14 Mar 2024 01:19:22 AM UTC: 
 exercises.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:10: error: expected ‘;’ before ‘}’ token
   75 |       i++
      |          ^
      |          ;
   76 |     }
      |     ~     
Compilation failed
1efda0e
Thu 14 Mar 2024 01:19:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
f76acb8
Thu 14 Mar 2024 01:20:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
6225cfb
Thu 14 Mar 2024 01:20:49 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
077328b
Thu 14 Mar 2024 01:21:36 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c182391
Thu 14 Mar 2024 01:43:20 AM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:94:3: error: unknown type name ‘bool’
   94 |   bool esAscendente = true;
      |   ^~~~
exercises.c:6:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:94:23: error: ‘true’ undeclared (first use in this function)
   94 |   bool esAscendente = true;
      |                       ^~~~
exercises.c:94:23: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:94:23: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:95:3: error: unknown type name ‘bool’
   95 |   bool esDescendente = true;
      |   ^~~~
exercises.c:95:3: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:98:47: error: ‘false’ undeclared (first use in this function)
   98 |       if (arr[i] > arr[i + 1]) esAscendente = false;
      |                                               ^~~~~
exercises.c:98:47: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
Compilation failed
c3f4d34
Thu 14 Mar 2024 01:43:43 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
05cec52
Thu 14 Mar 2024 01:50:42 AM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
b554258
Thu 14 Mar 2024 01:55:04 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
8d2b768
Thu 14 Mar 2024 01:56:46 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
total_score: 60/70
140fab0
Thu 14 Mar 2024 03:23:45 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:156:26: error: ‘temp’ undeclared (first use in this function)
  156 |   Nodo *cabeza = NULL ; *temp = NULL ; *actual = NULL;
      |                          ^~~~
exercises.c:156:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:156:41: error: ‘actual’ undeclared (first use in this function)
  156 |   Nodo *cabeza = NULL ; *temp = NULL ; *actual = NULL;
      |                                         ^~~~~~
Compilation failed
497131f
Thu 14 Mar 2024 03:24:57 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
5b09336
Thu 14 Mar 2024 03:34:36 AM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|1
total_score: 60/70
a763977
Thu 14 Mar 2024 03:39:58 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:5: error: continue statement not within a loop
   75 |     continue;
      |     ^~~~~~~~
exercises.c:80:5: error: continue statement not within a loop
   80 |     continue;
      |     ^~~~~~~~
Compilation failed
b1c5e86
Thu 14 Mar 2024 03:40:32 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Thu 14 Mar 2024 03:43:06 AM UTC: 
 exercises.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  0|1
total_score: 60/70
f173539
Thu 14 Mar 2024 03:48:26 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
fa7dd75
Thu 14 Mar 2024 03:50:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
25b5616
